--- a/src/examples/ButtonGroupExample/ButtonGroupExample.scss
+++ b/src/examples/ButtonGroupExample/ButtonGroupExample.scss
@@ -3,25 +3,25 @@
 .status {
   text-transform: capitalize;
 
-  .count{
+  .count {
     display: inline-block;
-    color: #fff;
-    font-size: .85em;
-    font-family: textbook, arial, sans-serif;
-    line-height: 1.5;
-    border-radius: 3px;
-    padding: 0em .5em;
+    padding: 0 .5em;
     margin-left: 1em;
+    font-family: textbook, arial, sans-serif;
+    font-size: .85em;
+    line-height: 1.5;
+    color: #fff;
+    border-radius: 3px;
 
-    &-failed{
+    &-failed {
       background-color: #d9534f;
     }
 
-    &-running{
+    &-running {
       background-color: #f0ad4e;
     }
 
-    &-completed{
+    &-completed {
       background-color: #5cb85c;
     }
   }
